--- a/package.json
+++ b/package.json
@@ -11,12 +11,21 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "build:css": "tailwind build src/style.css -o src/assets/css/style.css"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.30",
+    "@fortawesome/free-brands-svg-icons": "^5.14.0",
+    "@fortawesome/free-regular-svg-icons": "^5.14.0",
+    "@fortawesome/free-solid-svg-icons": "^5.14.0",
+    "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.54",
+    "gatsby-plugin-postcss": "^2.3.11",
+    "pure-react-carousel": "^1.27.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-tooltip": "^4.2.9",
+    "tailwindcss": "^1.8.7"
   },
   "devDependencies": {
     "prettier": "2.1.1"
