--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.14.0",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "gatsby": "^2.24.54",
+    "gatsby-plugin-minify-html": "^1.0.4",
     "gatsby-plugin-postcss": "^2.3.11",
     "pure-react-carousel": "^1.27.3",
     "react": "^16.12.0",
